@@ -6,8 +6,8 @@ dependencies[] = xmlsitemap
 files[] = xmlsitemap_custom.test
 configure = admin/config/search/xmlsitemap/custom
 
-; Information added by Drupal.org packaging script on 2018-08-29
-version = "7.x-2.5"
+; Information added by Drupal.org packaging script on 2018-10-09
+version = "7.x-2.6"
 core = "7.x"
 project = "xmlsitemap"
-datestamp = "1535559185"
+datestamp = "1539120486"
