@@ -1,5 +1,12 @@
-Libraries 7.x-2.x, xxxx-xx-xx
+
+Libraries 7.x-2.5, 2018-10-5
 -----------------------------
+#2815965 by plach, Manav, tstoeckler, Proteo: Base theme is not loaded when checking for theme library info
+#2999116 by Anghelu, joshbrown81: Finds no library after update
+
+Libraries 7.x-2.4, 2018-09-10
+-----------------------------
+#2779591 by mark_fullmer, cglauren, improved PHP 7.x.x support.
 #2699799 by flaviovs, hanoii: Support reading version from package.json.
 #2816781 by joelstein: Add a 'access library reports' permission.
 #2823735 by amanaplan, tstoeckler: Add admin_menu cache clear integration.
